Added logic and created new structure for Conversations
